--- a/cc_mining/templates/base.html
+++ b/cc_mining/templates/base.html
@@ -7,6 +7,7 @@
         {% endblock "javascript"%}
         {% block "style"%}
             <link href='//fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+            <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
         {% endblock "style"%}
     </head>
     <body>
