Matrix working now

--- a/cc_mining/templates/index.html
+++ b/cc_mining/templates/index.html
@@ -171,6 +171,7 @@
                 <div id='typesdiv'>
                     <select id='types' class='novela_attr'>
                         <option value='tree'>Tree</option>
+                        <option value='matrix'>Matrix</option>
                     </select>
                 </div>
             </fieldset>
